update ignore & pipeline_manager

--- a/isp_emulation/isp_emulation.vcxproj
+++ b/isp_emulation/isp_emulation.vcxproj
@@ -97,7 +97,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>libxml2d.lib;libxml2_ad.lib;libxml2_a_dlld.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
