--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,15 +8,17 @@ elseif(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
 endif()
 file(GLOB_RECURSE INC_FILES "${CMAKE_SOURCE_DIR}/inc/*.h")
+file(GLOB_RECURSE CALIB_FILES "${CMAKE_SOURCE_DIR}/calib/*.h")
 file(GLOB_RECURSE SRC_FILES "${CMAKE_SOURCE_DIR}/src/*.cpp")
 file(GLOB_RECURSE PIPELINE_FILES "${CMAKE_SOURCE_DIR}/pipeline/*.cpp")
 file(GLOB_RECURSE CFG_FILES "${CMAKE_SOURCE_DIR}/cfg/*.xml")
-message(STATUS "${INC_FILES} ${SRC_FILES} ${PIPELINE_FILES} ${CFG_FILES}")
+message(STATUS "${INC_FILES} ${SRC_FILES} ${PIPELINE_FILES} ${CFG_FILES} ${CALIB_FILES}")
 source_group("header" FILES ${INC_FILES})
+source_group("calib" FILES ${CALIB_FILES})
 source_group("src" FILES ${SRC_FILES})
 source_group("pipeline" FILES ${PIPELINE_FILES})
 source_group("cfg" FILES ${CFG_FILES})
-add_executable(isp_emulation ${SRC_FILES} ${INC_FILES} ${PIPELINE_FILES} ${CFG_FILES})
+add_executable(isp_emulation ${SRC_FILES} ${INC_FILES} ${PIPELINE_FILES} ${CFG_FILES} ${CALIB_FILES})
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     set(DNG_SDK_INCLUDE_DIR "${CMAKE_SOURCE_DIR}/thirdparty/dng_sdk/include")
     set(DNG_SDK_LIBRARIES_RELEASE "${CMAKE_SOURCE_DIR}/thirdparty/dng_sdk/lib/dng_sdk_x64_Release.lib")
@@ -107,7 +109,7 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
         "qDNGXMPDocOps=0;")
 endif()
 
-include_directories(${CMAKE_SOURCE_DIR}/inc ${DNG_SDK_INCLUDE_DIR} ${JPEG_INCLUDE_DIR} ${XML_INCLUDE_DIR} ${SPDLOG_INCLUDE_DIR})
+include_directories(${CMAKE_SOURCE_DIR}/inc ${CMAKE_SOURCE_DIR}/calib ${DNG_SDK_INCLUDE_DIR} ${JPEG_INCLUDE_DIR} ${XML_INCLUDE_DIR} ${SPDLOG_INCLUDE_DIR})
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     target_link_libraries(isp_emulation 
         optimized ${DNG_SDK_LIBRARIES_RELEASE} ${XMP_LIBRARIES_RELEASE} ${JPEG_LIBRARIES_RELEASE} ${XML_LIBRARIES_RELEASE} ${SPDLOG_LIBRARIES_RELEASE}
