add demosaic && fix wbgain bug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ file(GLOB_RECURSE CALIB_FILES "${CMAKE_SOURCE_DIR}/calib/*.h")
 file(GLOB_RECURSE SRC_FILES "${CMAKE_SOURCE_DIR}/src/*.cpp")
 file(GLOB_RECURSE PIPELINE_FILES "${CMAKE_SOURCE_DIR}/pipeline/*.cpp")
 file(GLOB_RECURSE CFG_FILES "${CMAKE_SOURCE_DIR}/cfg/*.xml")
-message(STATUS "${INC_FILES} ${SRC_FILES} ${PIPELINE_FILES} ${CFG_FILES} ${CALIB_FILES}")
+#message(STATUS "${INC_FILES} ${SRC_FILES} ${PIPELINE_FILES} ${CFG_FILES} ${CALIB_FILES}")
 source_group("header" FILES ${INC_FILES})
 source_group("calib" FILES ${CALIB_FILES})
 source_group("src" FILES ${SRC_FILES})
