--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ source_group("src" FILES ${SRC_FILES})
 source_group("pipeline" FILES ${PIPELINE_FILES})
 source_group("cfg" FILES ${CFG_FILES})
 
+find_package(OpenCV REQUIRED)
+
 SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
 
 add_executable(isp_emulation ${SRC_FILES} ${INC_FILES} ${PIPELINE_FILES} ${CFG_FILES} ${CALIB_FILES})
@@ -113,16 +115,20 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
         "qDNGXMPDocOps=0;")
 endif()
 
-include_directories(${CMAKE_SOURCE_DIR}/inc ${CMAKE_SOURCE_DIR}/calib ${DNG_SDK_INCLUDE_DIR} ${JPEG_INCLUDE_DIR} ${XML_INCLUDE_DIR} ${SPDLOG_INCLUDE_DIR})
+include_directories(${CMAKE_SOURCE_DIR}/inc ${CMAKE_SOURCE_DIR}/calib ${DNG_SDK_INCLUDE_DIR} ${JPEG_INCLUDE_DIR} ${XML_INCLUDE_DIR} ${SPDLOG_INCLUDE_DIR} ${OpenCV_INCLUDE_DIRS})
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     target_link_libraries(isp_emulation 
-        optimized ${DNG_SDK_LIBRARIES_RELEASE} ${XMP_LIBRARIES_RELEASE} ${JPEG_LIBRARIES_RELEASE} ${XML_LIBRARIES_RELEASE} ${SPDLOG_LIBRARIES_RELEASE}
+        optimized ${DNG_SDK_LIBRARIES_RELEASE} ${XMP_LIBRARIES_RELEASE} ${JPEG_LIBRARIES_RELEASE} ${XML_LIBRARIES_RELEASE} ${SPDLOG_LIBRARIES_RELEASE})
+    target_link_libraries(isp_emulation 
         debug ${DNG_SDK_LIBRARIES_DEBUG} ${XMP_LIBRARIES_DEBUG} ${JPEG_LIBRARIES_DEBUG} ${XML_LIBRARIES_DEBUG} ${SPDLOG_LIBRARIES_DEBUG})
+
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
-target_link_libraries(isp_emulation 
-        optimized ${DNG_SDK_LIBRARIES_RELEASE} ${XMP_LIBRARIES_RELEASE} ${JPEG_LIBRARIES_RELEASE} ${XML_LIBRARIES_RELEASE} ${SPDLOG_LIBRARIES_RELEASE} z lzma
+    target_link_libraries(isp_emulation 
+        optimized ${DNG_SDK_LIBRARIES_RELEASE} ${XMP_LIBRARIES_RELEASE} ${JPEG_LIBRARIES_RELEASE} ${XML_LIBRARIES_RELEASE} ${SPDLOG_LIBRARIES_RELEASE} z lzma)
+    target_link_libraries(isp_emulation 
         debug ${DNG_SDK_LIBRARIES_DEBUG} ${XMP_LIBRARIES_DEBUG} ${JPEG_LIBRARIES_DEBUG} ${XML_LIBRARIES_DEBUG} ${SPDLOG_LIBRARIES_DEBUG} z lzma)
 endif()
+target_link_libraries(isp_emulation ${OpenCV_LIBS})
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 	add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD COMMAND ${CMAKE_COMMAND} -E 
