--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,11 @@ set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
 
 add_subdirectory(${CMAKE_SOURCE_DIR}/src)
 add_subdirectory(${CMAKE_SOURCE_DIR}/src/console_main)
+add_dependencies(isp_console isp_core)
 
 set(wxWidgets_ROOT_DIR "D:/wxWidgets317")
 find_package(wxWidgets)
 if(wxWidgets_FOUND)
 add_subdirectory(${CMAKE_SOURCE_DIR}/src/UI_main)
+add_dependencies(isp_UI isp_core)
 endif()
