--- a/src/UI_main/CMakeLists.txt
+++ b/src/UI_main/CMakeLists.txt
@@ -12,8 +12,9 @@ set(CURRENT_TARGET_NAME isp_UI)
 include(${wxWidgets_USE_FILE})
 
 file(GLOB SRC_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
+file(GLOB RES_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.rc")
 
-add_executable(${CURRENT_TARGET_NAME} ${SRC_FILES})
+add_executable(${CURRENT_TARGET_NAME} ${SRC_FILES} ${RES_FILES})
 
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     set(ISP_LIBRARIES optimized "${LIBRARY_OUTPUT_PATH}/Release/isp_core.lib" debug "${LIBRARY_OUTPUT_PATH}/Debug/isp_core.lib")
@@ -30,9 +31,9 @@ elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
     set(DNG_SDK_LIBRARIES optimized "${CMAKE_SOURCE_DIR}/thirdparty/dng_sdk/lib/libdng_sdk_release.a" debug "${CMAKE_SOURCE_DIR}/thirdparty/dng_sdk/lib/libdng_sdk_debug.a")
     set(XMP_LIBRARIES optimized "${CMAKE_SOURCE_DIR}/thirdparty/dng_sdk/lib/staticXMPCoreRelease.ar" debug "${CMAKE_SOURCE_DIR}/thirdparty/dng_sdk/lib/staticXMPCoreDebug.ar"
     optimized "${CMAKE_SOURCE_DIR}/thirdparty/dng_sdk/lib/staticXMPFilesRelease.ar" debug "${CMAKE_SOURCE_DIR}/thirdparty/dng_sdk/lib/staticXMPFilesDebug.ar")
-    set(JPEG_LIBRARIES optimized "${CMAKE_SOURCE_DIR}/thirdparty/libjpeg9c/lib_linux/libjpeg.a" debug "${CMAKE_SOURCE_DIR}/thirdparty/libjpeg9c/lib_linux/libjpeg_d.a")
-    set(XML_LIBRARIES optimized "${CMAKE_SOURCE_DIR}/thirdparty/libxml2/lib_linux/libxml2_release.a" debug "${CMAKE_SOURCE_DIR}/thirdparty/libxml2/lib_linux/libxml2_debug.a"
-    optimized "${CMAKE_SOURCE_DIR}/thirdparty/libxml2/lib_linux/libxml2mod_release.a" debug "${CMAKE_SOURCE_DIR}/thirdparty/libxml2/lib_linux/libxml2mod_debug.a")
+    set(JPEG_LIBRARIES optimized "${CMAKE_SOURCE_DIR}/thirdparty/libjpeg9c/lib/libjpeg.a" debug "${CMAKE_SOURCE_DIR}/thirdparty/libjpeg9c/lib/libjpeg_d.a")
+    set(XML_LIBRARIES optimized "${CMAKE_SOURCE_DIR}/thirdparty/libxml2/lib/libxml2_release.a" debug "${CMAKE_SOURCE_DIR}/thirdparty/libxml2/lib/libxml2_debug.a"
+    optimized "${CMAKE_SOURCE_DIR}/thirdparty/libxml2/lib/libxml2mod_release.a" debug "${CMAKE_SOURCE_DIR}/thirdparty/libxml2/lib/libxml2mod_debug.a")
 endif()
 
 include_directories(${CMAKE_SOURCE_DIR}/inc)
