--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ build/x64
 build/CMakeFiles
 build/src
 build/Makefile
+build/*.raw
+build/*.RAW
+build/*.pnm
+build/*.PNM
 *.obj
 *.tlog
 *.iobj
@@ -27,4 +31,6 @@ build/cmake_install.cmake
 build/.cmake
 build/compile_commands.json
 build/src
-./lib
+lib/*.a
+lib/Debug/*.lib
+lib/Release/*.lib
